--- a/index.html
+++ b/index.html
@@ -44,26 +44,33 @@
         <div class="container">
             <div class="header-slider__content">
                 <div class="connection-info">
-
-                    <!-- <div class="navigation"> -->
-                    <div class="navigation-item">
-                        <img src="./img/icons/phone icon.svg" alt="phone">
-                        <div class="navigation-item__inner">
-                            <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
-                            <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
+                    <div class="connection-info__item">
+                        <div class="navigation-item navigation-item--phones">
+                            <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone">
+                            <div class="navigation-item__inner">
+                                <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
+                                <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
+                            </div>
+                        </div>
+                        <div class="navigation-item navigation-item--email">
+                            <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon">
+                            <a class="navigation-item__link"
+                                href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
                         </div>
                     </div>
-                    <div class="navigation-item">
-                        <img src="./img/icons/mail icon.svg" alt="mail">
-                        <a href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
+                    <div class="connection-info__item">
+                        <div class="search">
+                            <input type="text" placeholder="serch..." class="search__input">
+                            <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
+                        </div>
+                        <a href="" class="btn connection-info__btn">Apply online</a>
                     </div>
-                    <input type="text" placeholder="serch...">
-                    <button class="btn">Apply online</button>
+
 
                 </div>
 
                 <div class="header-slider__block">
-                    <h1 class="header-slider__mail-title">Computer </h1>
+                    <h1 class="header-slider__mail-title">Business</h1>
                     <div class="subtitle-wrap">
                         <img src="./img/photo/dots.svg" alt="" class="dots-img">
                         <h2 class="header-slider__subtitle">Edugain in Ukranian
@@ -87,9 +94,16 @@
                         <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span></li>
                         <li class="header-slider__nav-item"><span class="header-slider__nav-num">06</span></li>
                     </ul>
+
+                    <div class="header-slider__buttons">
+                        <button class="slider-header-btn js-header-slide-prev"><img src="./img/icons/btn-prev.svg"
+                                alt=""></button>
+                        <button class="slider-header-btn js-header-slide-next"><img src="./img/icons/next-btn.svg"
+                                alt=""></button>
+
+                    </div>
                 </nav>
                 <nav class="social-nav">
-
                     <ul class="social-nav__list">
                         <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
                         <li class="social-nav__item"><a href="#" class="social-nav__link"><img
@@ -113,7 +127,6 @@
                 </nav>
             </div>
         </div>
-
     </section>
     <div class="assistent-slider-wrap">
         <div class="header-assistent-slider">
@@ -122,81 +135,80 @@
                     <h3 class="assistent-slider-item__title">Economics</h3>
                     <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle"></h4>
+                <h4 class="assistent-slider-item__subtitle">Economics</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
-                <a href="#" class="btn">More Detalis</a>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Business Administratio</h3>
+                    <img src="./img/icons/research 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Business Administratio</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">International Relations</h3>
+                    <img src="./img/icons/internet 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">International Relations</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
             </div>
             <div class="assistent-slider-item">
                 <div class="assistent-slider-item__title-wrap">
                     <h3 class="assistent-slider-item__title">Economics</h3>
                     <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle"></h4>
+                <h4 class="assistent-slider-item__subtitle">Economics</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
-                <a href="#" class="btn">More Detalis</a>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
             </div>
             <div class="assistent-slider-item">
                 <div class="assistent-slider-item__title-wrap">
                     <h3 class="assistent-slider-item__title">Economics</h3>
                     <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle"></h4>
+                <h4 class="assistent-slider-item__subtitle">Economics</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
-                <a href="#" class="btn">More Detalis</a>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">International Relations</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">International Relations</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
             </div>
             <div class="assistent-slider-item">
                 <div class="assistent-slider-item__title-wrap">
                     <h3 class="assistent-slider-item__title">Economics</h3>
                     <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle"></h4>
+                <h4 class="assistent-slider-item__subtitle">Economics</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
-                <a href="#" class="btn">More Detalis</a>
-            </div>
-            <div class="assistent-slider-item">
-                <div class="assistent-slider-item__title-wrap">
-                    <h3 class="assistent-slider-item__title">Economics</h3>
-                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
-                </div>
-                <h4 class="assistent-slider-item__subtitle"></h4>
-                <p class="assistent-slider-item__text">
-                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
-                    vfvd</p>
-                <a href="#" class="btn">More Detalis</a>
-            </div>
-            <div class="assistent-slider-item">
-                <div class="assistent-slider-item__title-wrap">
-                    <h3 class="assistent-slider-item__title">Economics</h3>
-                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
-                </div>
-                <h4 class="assistent-slider-item__subtitle"></h4>
-                <p class="assistent-slider-item__text">
-                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
-                    vfvd</p>
-                <a href="#" class="btn">More Detalis</a>
-            </div>
-            <div class="assistent-slider-item">
-                <div class="assistent-slider-item__title-wrap">
-                    <h3 class="assistent-slider-item__title">Economics</h3>
-                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
-                </div>
-                <h4 class="assistent-slider-item__subtitle"></h4>
-                <p class="assistent-slider-item__text">
-                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
-                    vfvd</p>
-                <a href="#" class="btn">More Detalis</a>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
             </div>
         </div>
     </div>
-
     <section class="universities">
         <div class="container">
             <div class="universities-wrap">
@@ -342,7 +354,6 @@
             </div>
         </div>
         <div class="container">
-
             <div class="slider-nav">
                 <div class="slider-line">
                     <ul class="slider-line__list">
@@ -377,8 +388,6 @@
         <div class="container">
             <div class="admission-block-wrap">
                 <div class="admission-item-wrap">
-
-
                     <div class="title-block">
                         <h3 class="title-block__header">
                             ADMISSION PROCESS
@@ -436,7 +445,6 @@
                     <input type="submit" class="btn" placeholder="send">
                 </form>
             </div>
-
         </div>
     </section>
     <section class="courses">
@@ -452,8 +460,6 @@
                 gkdhvdvkhdkfvhscsdckjsckjsdkjcsdkjckjsdckjsdbckjsbdkcskjdbckjsbckjsbckjskjcscndsncdvfdvfvd</p>
         </div>
         <div class="slider-wrap courses__slider">
-
-
             <div class="slider-item">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
@@ -554,7 +560,6 @@
             </div>
         </div>
         <div class="container">
-
             <div class="slider-nav">
                 <div class="slider-line">
                     <ul class="slider-line__list">
@@ -576,9 +581,7 @@
                     <button class="btn slider-nav-btn slider-nav-btn--next js-courses-slider__next-btn"><i
                             class="fas fa-arrow-right"></i></button>
                 </div>
-
             </div>
-
             <div class="universities-navigations">
                 <button class="btn btn--university btn--posive">LEARN MORE</button>
             </div>
@@ -593,7 +596,6 @@
                     <!-- поменять год -->
                     <span class="academic__years">2020-2021</span>
                     <!---->
-
                     <h5 class="academic__title">
                         are open!
                     </h5>
@@ -670,7 +672,6 @@
             <img src="./img/photo/gallery-slider-4.png" alt="slider" class="gallery-slider-item">
         </div>
         <div class="container">
-
             <div class="slider-nav">
                 <div class="slider-line">
                     <ul class="slider-line__list">
@@ -692,12 +693,9 @@
                     <button class="btn slider-nav-btn slider-nav-btn--next js-gallery-slider__next-btn"><i
                             class="fas fa-arrow-right"></i></button>
                 </div>
-
             </div>
-
         </div>
     </section>
-
     <section class="feedback">
         <div class="container">
             <div class="title-block">
@@ -708,14 +706,11 @@
                     <span class="line-circle"></span>
                 </div>
             </div>
-
             <div class="feedback-slider">
                 <div class="quotes">
                     <img src="./img/icons/“.svg" alt="''">
                 </div>
                 <div class="feedback-slider__inner">
-
-
                     <div class="feedback-item">
                         <div class="feedback-item__inner">
                             <img src="./img/photo/feedback-img.png" alt="feedback" class="feedback-item__img">
@@ -736,7 +731,6 @@
                                     places
                                     to visit in Grozny! Thank you once again!</p>
                             </div>
-
                         </div>
                     </div>
                     <div class="feedback-item">
@@ -759,7 +753,6 @@
                                     places
                                     to visit in Grozny! Thank you once again!</p>
                             </div>
-
                         </div>
                     </div>
                     <div class="feedback-item">
@@ -782,7 +775,6 @@
                                     places
                                     to visit in Grozny! Thank you once again!</p>
                             </div>
-
                         </div>
                     </div>
                     <div class="feedback-item">
@@ -805,10 +797,8 @@
                                     places
                                     to visit in Grozny! Thank you once again!</p>
                             </div>
-
                         </div>
                     </div>
-
                 </div>
             </div>
     </section>
@@ -822,11 +812,8 @@
                 <a href="tel:+380637909294" class="telephones__link">+38 (063) 790-92-94</a>
                 <a href="tel:+79092077688" class="telephones__link">+7 (909) 207-76-88</a>
             </div>
-
         </div>
         <div class="container">
-
-
             <h3 class="form-title">Or fill in the form</h3>
             <form action="" class="footer-form">
                 <input type="text" placeholder="First Name" class="footer-form__input">
@@ -835,7 +822,6 @@
                 <input type="email" placeholder="Email Adress" class="footer-form__input">
                 <input type="submit" placeholder="Request INFO">
             </form>
-
             <div class="footer-items">
                 <div class="footer-item">
                     <img src="./img/icons/logo footer.svg" alt="edugain overseas">
@@ -879,7 +865,6 @@
     <script src="./js/headerSticky.js"></script>
 
     <script src="./js/header-assintend-slider.js"></script>
-
     <script src="./js/university-slider.js"></script>
     <script src="./js/courses-slider.js"></script>
     <script src="./js/gallery-slider.js"></script>
