--- a/index.html
+++ b/index.html
@@ -510,21 +510,21 @@
                 </div>
                 <nav class="header-slider__nav header-slider__nav--desktop">
                     <ul class="header-slider__nav-list">
-                        <li class="header-slider__nav-item header-slider__nav-item--active"><img
+                        <li class="header-slider__nav-item header-slider__nav-item--active" data-num="1"><img
                                 class="header-slider__nav-icon" src="./img/icons/doctor.svg" alt=""><span
                                 class="header-slider__nav-num">01</span></li>
-                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                        <li class="header-slider__nav-item" data-num="2"><img class="header-slider__nav-icon"
                                 src="./img/icons/money.svg" alt=""><span class="header-slider__nav-num">02</span></li>
-                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                        <li class="header-slider__nav-item" data-num="3"><img class="header-slider__nav-icon"
                                 src="./img/icons/computer.svg" alt=""><span class="header-slider__nav-num">03</span>
                         </li>
-                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                        <li class="header-slider__nav-item" data-num="4"><img class="header-slider__nav-icon"
                                 src="./img/icons/enginiring.svg" alt=""><span class="header-slider__nav-num">04</span>
                         </li>
-                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                        <li class="header-slider__nav-item" data-num="5"><img class="header-slider__nav-icon"
                                 src="./img/icons/aviation.svg" alt=""><span class="header-slider__nav-num">05</span>
                         </li>
-                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                        <li class="header-slider__nav-item" data-num="6"><img class="header-slider__nav-icon"
                                 src="./img/icons/others.svg" alt=""><span class="header-slider__nav-num">06</span></li>
                     </ul>
 
@@ -540,13 +540,12 @@
     </section>
     <div class="assistent-slider-wrap">
         <div class="header-assistent-slider">
-
             <div class="assistent-slider-item">
                 <div class="assistent-slider-item__title-wrap">
-                    <h3 class="assistent-slider-item__title">Business Administratio</h3>
+                    <h3 class="assistent-slider-item__title">Business</h3>
                     <img src="./img/icons/research 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle">Business Administratio</h4>
+                <h4 class="assistent-slider-item__subtitle">Business Administratio 1</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
@@ -554,10 +553,10 @@
             </div>
             <div class="assistent-slider-item">
                 <div class="assistent-slider-item__title-wrap">
-                    <h3 class="assistent-slider-item__title">International Relations</h3>
+                    <h3 class="assistent-slider-item__title">International </h3>
                     <img src="./img/icons/internet 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle">International Relations</h4>
+                <h4 class="assistent-slider-item__subtitle">International Relations 1</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
@@ -568,7 +567,7 @@
                     <h3 class="assistent-slider-item__title">Economics</h3>
                     <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle">Economics</h4>
+                <h4 class="assistent-slider-item__subtitle">Economics 1</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
@@ -580,7 +579,7 @@
                     <h3 class="assistent-slider-item__title">Economics</h3>
                     <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle">Economics</h4>
+                <h4 class="assistent-slider-item__subtitle">Economics 2</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
@@ -588,10 +587,10 @@
             </div>
             <div class="assistent-slider-item">
                 <div class="assistent-slider-item__title-wrap">
-                    <h3 class="assistent-slider-item__title">International Relations</h3>
+                    <h3 class="assistent-slider-item__title">International</h3>
                     <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle">International Relations</h4>
+                <h4 class="assistent-slider-item__subtitle">International Relations 2</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
@@ -602,7 +601,139 @@
                     <h3 class="assistent-slider-item__title">Economics</h3>
                     <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
                 </div>
-                <h4 class="assistent-slider-item__subtitle">Economics</h4>
+                <h4 class="assistent-slider-item__subtitle">Economics 2</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics 3</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 3</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 3</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 3</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 4</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 4</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 4</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 5</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 5</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 5</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 6</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 6</h4>
+                <p class="assistent-slider-item__text">
+                    gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
+                    vfvd</p>
+                <a href="#" class="btn assistent-slider-item__btn">More Detalis</a>
+            </div>
+            <div class="assistent-slider-item">
+                <div class="assistent-slider-item__title-wrap">
+                    <h3 class="assistent-slider-item__title">Economics</h3>
+                    <img src="./img/icons/budget 1.svg" alt="" class="assistent-slider-item__icon">
+                </div>
+                <h4 class="assistent-slider-item__subtitle">Economics 6</h4>
                 <p class="assistent-slider-item__text">
                     gkdhvdvkhdkf vhscsdck jsckjsd kjcsdkj ckjsd ckjsdb ckjsbdk cskjdbckjs bckjsbck jskjcscnd sncdvfd
                     vfvd</p>
