--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="header-info">
             <div class="container">
-                <div class="header-info__wrap">
+                <!-- <div class="header-info__wrap">
                     <ul class="header-info__phones">
                         <li class="header-info__phone-item"><img src="" alt=""><a href=":tel">+38 (063) 790-92-94
                             </a></li>
@@ -99,7 +99,7 @@
                         <li class="social-links-item"><a href="#" class="social-links-link"><img
                                     class="social-links-icon" src="./img//icons/facebook blue.svg" alt=""></a></li>
                     </ul>
-                </div>
+                </div> -->
 
             </div>
         </div>
@@ -469,7 +469,6 @@
                 </div>
                 <a href="" class="btn connection-info__btn connection-info__btn--red connection-info__btn--menu">Apply
                     online</a>
-
             </div>
     </header>
     <section class="header-slider">
