--- a/index.html
+++ b/index.html
@@ -162,19 +162,21 @@
                     <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone" width="21"
                         height="21">
 
-                    <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
+                    <a href="tel:+380637909294" class="navigation-item__link navigation-item__link--adaptive-menu">+38
+                        (063) 790-92-94</a>
 
                 </div>
                 <div class="navigation-item ">
                     <img src="./img/icons/phone icon.svg" class="navigation-item__icon" width="21" height="21"
                         alt="phone">
-                    <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
+                    <a href="tel:+79092077688" class="navigation-item__link navigation-item__link--adaptive-menu">+7
+                        (909) 207-76-88</a>
                 </div>
 
                 <div class="navigation-item navigation-item--email">
                     <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon" width="16"
                         height="16">
-                    <a class="navigation-item__link"
+                    <a class="navigation-item__link navigation-item__link--adaptive-menu"
                         href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
                 </div>
             </div>
